Workarounds for bug in KMessageWidget

KMessageWidget->animatedShow() causes crash if called in constructor
or load()

BUG: 331268